<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_troops"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pgt.xds.club.SetTroopsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/title_color">

        <RelativeLayout
            android:id="@+id/left_layout"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/title_right_click_bg"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />


        </RelativeLayout>

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troops_new" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/troops_name_msg"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/set_name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/input_color"
        android:hint="@string/troops_name_hint"
        android:padding="10dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/troops_introduce_msg" />

    <EditText
        android:id="@+id/troops_introduce_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/input_color"
        android:hint="@string/troops_introduce_hint"
        android:padding="10dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/set_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/btn_no_click"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="17sp" />
</LinearLayout>
