<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.pgt.xds.my.StatisticsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/title_color">

        <RelativeLayout
            android:id="@+id/left_layout"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/title_right_click_bg"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />


        </RelativeLayout>

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_statistics" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/statistics_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/day_rb"
            style="@style/StatisticsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/compile_day" />

        <RadioButton
            android:id="@+id/week_rb"
            style="@style/StatisticsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compile_week" />

        <RadioButton
            android:id="@+id/month_rb"
            style="@style/StatisticsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compile_month" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/statistics_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
