<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white">

        <ImageView

            android:id="@+id/my_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:src="@drawable/qq_login" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alina"
                android:textColor="@color/rangoon_green" />

            <TextView
                android:id="@+id/compile_info_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/compile"
                android:text="@string/compile_info"
                android:textColor="@color/gray1"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/my_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:src="@drawable/grade5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/my_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textColor="@color/rangoon_green"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/my_km"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_mileage"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/my_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textColor="@color/rangoon_green"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/my_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/rangoon_green"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/cal"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_calorie"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/my_history_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/club_btn_bg"
        android:padding="13dp"
        android:text="@string/my_history"
        android:textColor="@color/rangoon_green" />

    <TextView
        android:id="@+id/my_statistics_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/club_btn_bg"
        android:padding="13dp"
        android:text="@string/my_statistics"
        android:textColor="@color/rangoon_green" />

    <TextView
        android:id="@+id/my_bicycle_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/club_btn_bg"
        android:padding="13dp"
        android:text="@string/my_bicycle"
        android:textColor="@color/rangoon_green" />

    <TextView
        android:id="@+id/my_wallet_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/club_btn_bg"
        android:padding="13dp"
        android:text="@string/my_wallet"
        android:textColor="@color/rangoon_green" />

    <TextView

        android:id="@+id/my_indent_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/club_btn_bg"
        android:padding="13dp"
        android:text="@string/my_indent"
        android:textColor="@color/rangoon_green" />

</LinearLayout>