<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/title_color">

        <RelativeLayout
            android:id="@+id/image_back"
            android:layout_width="55dp"
            android:background="@drawable/title_right_click_bg"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:text="@string/register"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/input_color"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/register_nickname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/nickname"/>
        <EditText
            android:id="@+id/register_nickname_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/register_nickname_text"
            android:layout_toLeftOf="@+id/register_delete_image"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:background="@null"/>

        <RelativeLayout
            android:id="@+id/register_delete_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_centerInParent="true"
                android:src="@drawable/delete"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/input_color"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/register_gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/gender"/>
        <ImageView
            android:id="@+id/man_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/register_gender_text"
            android:src="@drawable/select"/>
        <TextView
            android:id="@+id/man_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/man_select_image"
            android:text="@string/man"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:id="@+id/woman_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/man_text"
            android:src="@drawable/unselect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/woman_select_image"
            android:text="@string/woman"
            android:layout_marginLeft="10dp"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/input_color"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/register_birthday_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/birthday"/>

        <EditText
            android:id="@+id/birthday_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/register_birthday_text"
            android:inputType="date"
            android:hint="@string/birthday_hint"
            android:background="@null"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/skip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/skip"
            android:textColor="@color/gray"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/complete_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/btn_no_click"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="17sp"/>


</LinearLayout>