<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compile_sex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pgt.xds.my.CompileSexActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/title_color">

        <RelativeLayout
            android:id="@+id/left_layout"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/title_right_click_bg"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />


        </RelativeLayout>

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_sex" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/compile_sex"
        android:textColor="@color/rangoon_green" />

    <RadioGroup
        android:id="@+id/compile_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sex_boy_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/sex_search_text"
            android:button="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:text="@string/compile_boy"
            android:textColor="@color/sex_rb" />

        <RadioButton
            android:id="@+id/sex_girl_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/sex_search_text"
            android:button="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:text="@string/compile_girl"
            android:textColor="@color/sex_rb" />
    </RadioGroup>
</LinearLayout>
